--- a/Annuaire/Dockerfile
+++ b/Annuaire/Dockerfile
@@ -4,4 +4,4 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
 EXPOSE 8000
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "Annuaire.wsgi.application.wsgi"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "Annuaire.wsgi.application"]
