--- a/Annuaire/Dockerfile
+++ b/Annuaire/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
+RUN ls -la
 EXPOSE 8000
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "Annuaire.wsgi.application"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "Annuaire.wsgi:application"]
