--- a/Annuaire/Dockerfile
+++ b/Annuaire/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
+RUN python manage.py makemigrations 
 RUN python manage.py migrate
 RUN ls -la
 EXPOSE 8000
