--- a/Annuaire/Dockerfile
+++ b/Annuaire/Dockerfile
@@ -3,8 +3,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
-RUN python manage.py makemigrations
-RUN python manage.py migrate
+COPY entrypoint.sh /usr/src/app/entrypoint.sh
+RUN chmod +x /usr/src/app/entrypoint.sh
 RUN ls -la
 EXPOSE 8000
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "Annuaire.wsgi:application"]
